--- a/SalesManagement/res/drawable/start_page_blue_button_style.xml
+++ b/SalesManagement/res/drawable/start_page_blue_button_style.xml
@@ -3,7 +3,7 @@
     <item android:state_pressed="true" >
         <shape>
             <solid
-                android:color="#343434" />
+                android:color="#19C2DC" />
             <stroke
                 android:width="1dp"
                 android:color="#171717" />
@@ -19,7 +19,7 @@
     <item>
         <shape>
             <gradient
-                android:startColor="#343434"
+                android:startColor="#19C2DC"
                 android:endColor="#171717"
                 android:angle="270" />
             <stroke
