--- a/SalesManagement/res/layout/activity_play_area.xml
+++ b/SalesManagement/res/layout/activity_play_area.xml
@@ -15,89 +15,110 @@
         android:id="@+id/buttongridview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_weight="2.6"
         android:columnCount="6"
         android:orientation="vertical"
-        android:rowCount="6" 
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp">
+        android:rowCount="6"
+        android:layout_gravity="fill"
+         >
     </GridLayout>
 
     <LinearLayout
         android:id="@+id/controlTimeMoneyLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp" >
+        android:layout_weight="0.4"
+        android:baselineAligned="false"
+        android:orientation="horizontal" >
 
         <GridLayout
             android:id="@+id/navigationButtons"
-            android:layout_width="wrap_content"
+            android:layout_width="0dip"
             android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
+            android:layout_weight="2"
             android:columnCount="3"
             android:orientation="vertical"
             android:rowCount="3" >
 
-            <Space />
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp" />
 
             <Button
                 android:id="@+id/leftNavigation"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
                 android:background="@drawable/navigation_left_button_background" />
 
-            <Space />
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:layout_margin="2dp" />
 
             <Button
                 android:id="@+id/upNavigation"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
                 android:background="@drawable/navigation_up_button_background" />
 
             <Button
                 android:id="@+id/confirmSelection"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
                 android:background="@drawable/confirm_button_background" />
 
             <Button
                 android:id="@+id/downNavigation"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
                 android:background="@drawable/navigation_down_button_background" />
 
-            <Space />
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp" />
 
             <Button
                 android:id="@+id/rightNavigation"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
                 android:background="@drawable/navigation_right_button_background" />
 
-            <Space />
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:layout_margin="2dp" />
         </GridLayout>
 
         <LinearLayout
             android:id="@+id/timeScorePanel"
-            android:layout_width="fill_parent"
+            android:layout_width="0dip"
             android:layout_height="fill_parent"
-            android:layout_marginLeft="40dp"
-            android:columnCount="1"
+            android:layout_weight="1"
             android:orientation="vertical"
-            android:rowCount="2" >
+            android:layout_marginLeft="5dp" >
 
             <LinearLayout
                 android:id="@+id/onlyTimePanel"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="fill_parent"
+                android:layout_height="0dip"
                 android:layout_gravity="center"
-                android:layout_marginTop="10dp"
+                android:layout_weight="1.0"
                 android:background="@drawable/rounded_text_view_time"
                 android:orientation="horizontal" >
 
                 <TextView
                     android:id="@+id/hoursMinutes"
-                    android:layout_width="62dp"
-                    android:layout_height="48dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_marginLeft="2dp"
                     android:gravity="left|center_vertical"
                     android:text="@string/startTime"
@@ -108,26 +129,35 @@
                     android:id="@+id/AMPM"
                     android:layout_width="fill_parent"
                     android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp"
                     android:gravity="left|center_vertical"
                     android:text="@string/amstring"
                     android:textSize="15sp"
                     android:textStyle="bold" />
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/moneyEarned"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+            <LinearLayout
+                android:id="@+id/moneyPanel"
+                android:layout_width="fill_parent"
+                android:layout_height="0dip"
                 android:layout_gravity="center"
-                android:layout_marginLeft="2dp"
                 android:layout_marginTop="10dp"
+                android:layout_weight="1.0"
                 android:background="@drawable/rounded_text_view_money"
-                android:gravity="center_vertical|left"
-                android:text="@string/moneyEarned"
-                android:textSize="15sp"
-                android:textStyle="bold" />
+                android:orientation="horizontal" >
+
+                <TextView
+                    android:id="@+id/moneyEarned"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="2dp"
+                    android:gravity="left|center_vertical"
+                    android:text="@string/moneyEarned"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
         </LinearLayout>
-        
     </LinearLayout>
 
 </LinearLayout>
