--- a/SalesManagement/res/drawable/customer_button_background.xml
+++ b/SalesManagement/res/drawable/customer_button_background.xml
@@ -4,7 +4,7 @@
         <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
             <solid android:color="#F7F43C" />
             <stroke android:width="3dp"
-                 android:color="#0FECFF" />
+                 android:color="#5F5F5B" />
             <corners android:bottomLeftRadius="10dp" 
                 android:bottomRightRadius="10dp"
                 android:topLeftRadius="10dp" 
@@ -15,7 +15,7 @@
     <item android:state_pressed="false" android:state_focused="false">
         <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 		    <solid android:color="#FACD08"/>
-	    	<stroke android:width="3dp" android:color="#0FECFF"/>
+	    	<stroke android:width="3dp" android:color="#5F5F5B"/>
 		    <corners
         		android:topLeftRadius="10dp"
 		        android:topRightRadius="10dp"
