--- a/SalesManagement/res/drawable/customer_visited_button_background.xml
+++ b/SalesManagement/res/drawable/customer_visited_button_background.xml
@@ -4,7 +4,7 @@
     <item android:state_enabled="false" android:state_focused="false"><shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
             <solid android:color="#3A3636" />
             <stroke android:width="3dp"
-                 android:color="#0FECFF" />
+                 android:color="#5F5F5B" />
             <corners android:bottomLeftRadius="10dp" 
                 android:bottomRightRadius="10dp" 
                 android:topLeftRadius="10dp" 
@@ -16,7 +16,7 @@
     <item android:state_enabled="false" android:state_focused="true">
         <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 		    <solid android:color="#FFFFFF"/>
-		    <stroke android:width="3dp" android:color="#0FECFF"/>
+		    <stroke android:width="3dp" android:color="#5F5F5B"/>
 		    <corners 
 		        android:topLeftRadius="10dp"
 		        android:topRightRadius="10dp"
