--- a/SalesManagement/res/drawable/normal_button_background.xml
+++ b/SalesManagement/res/drawable/normal_button_background.xml
@@ -5,7 +5,7 @@
         <shape xmlns:android="http://schemas.android.com/apk/res/android"
              android:shape="rectangle">
             <solid android:color="#F7F43C" />
-            <stroke android:width="3dp" android:color="#0FECFF" />
+            <stroke android:width="3dp" android:color="#5F5F5B" />
             <corners android:bottomLeftRadius="10dp" 
                 	 android:bottomRightRadius="10dp" 
                 	 android:topLeftRadius="10dp" 
