--- a/SalesManagement/res/drawable/start_button_background.xml
+++ b/SalesManagement/res/drawable/start_button_background.xml
@@ -4,7 +4,7 @@
         android:state_pressed="true">
         <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 		    <solid android:color="#F7F43C"/>
-		    <stroke android:width="3dp" android:color="#0FECFF"/>
+		    <stroke android:width="3dp" android:color="#5F5F5B"/>
 		    <corners 
 		        android:topLeftRadius="10dp"
 		        android:topRightRadius="10dp"
@@ -17,7 +17,7 @@
         android:state_pressed="false" android:state_focused="false">
         <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 		    <solid android:color="#2DFA08"/>
-		    <stroke android:width="3dp" android:color="#0FECFF"/>
+		    <stroke android:width="3dp" android:color="#5F5F5B"/>
 		    <corners 
 		        android:topLeftRadius="10dp"
 		        android:topRightRadius="10dp"
