--- a/SalesManagement/res/layout/activity_case_study_options.xml
+++ b/SalesManagement/res/layout/activity_case_study_options.xml
@@ -14,7 +14,8 @@
     <TextView
         android:id="@+id/caseStudyOptionHeading"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dip"
+        android:layout_weight="1"
         android:gravity="center"
         android:text="@string/caseStudyOptionsHeading"
         android:textAppearance="?android:attr/textAppearanceListItemSmall" />
@@ -22,11 +23,12 @@
     <ScrollView
         android:id="@+id/scrollViewOptions"
         android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:layout_weight="0.20"
+        android:layout_height="0dip"
+        android:layout_marginTop="5dp"
+        android:layout_weight="5"
         android:background="@drawable/customer_button_background"
-        android:scrollbars="vertical" 
-        android:padding="1dp">
+        android:padding="1dp"
+        android:scrollbars="vertical" >
 
         <RadioGroup
             android:id="@+id/radioGroupOptions"
@@ -67,68 +69,78 @@
         </RadioGroup>
     </ScrollView>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0dip"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:text="@string/caseStudyOptionEvaluation"
+        android:textAppearance="?android:attr/textAppearanceListItemSmall" />
+
     <ScrollView
         android:id="@+id/scrollViewOptionsEvaluataion"
         android:layout_width="match_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="0dip"
         android:layout_marginTop="10dp"
-        android:layout_weight="0.3"
+        android:layout_weight="3"
         android:background="@drawable/customer_button_background"
-        android:scrollbars="vertical"
-        android:padding="2dp" >
+        android:padding="2dp"
+        android:scrollbars="vertical" >
 
         <TextView
             android:id="@+id/optionEvaluationText"
+            style="?android:attr/radioButtonStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="15sp" 
             android:padding="2dp"
-            style="?android:attr/radioButtonStyle"/>
-        
+            android:textSize="15sp" />
     </ScrollView>
 
     <FrameLayout
         android:id="@+id/frameLayoutButtons"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="0dip"
+        android:layout_weight="2">
 
         <LinearLayout
             android:id="@+id/backSubmitButtonLayout"
             style="?android:attr/buttonBarStyle"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:weightSum="2">
 
             <Button
                 android:id="@+id/backPlayArea"
                 style="?android:attr/buttonBarButtonStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.50"
-                android:text="@string/BackPlayArea" />
+                android:layout_width="0dip"
+                android:layout_height="match_parent"
+                android:text="@string/BackPlayArea" 
+                android:layout_weight="1"/>
 
             <Button
                 android:id="@+id/submitSoultionButton"
                 style="?android:attr/buttonBarButtonStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.50"
-                android:text="@string/SubmitButtonText" />
+                android:layout_width="0dip"
+                android:layout_height="match_parent"
+                android:text="@string/SubmitButtonText" 
+                android:layout_weight="1"/>
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/continuePlayAreaButtonLayout"
             style="?android:attr/buttonBarStyle"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="horizontal"
-            android:visibility="invisible" >
+            android:visibility="invisible" 
+            android:weightSum="2">
 
             <Button
                 android:id="@+id/continuePlayArea"
                 style="?android:attr/buttonBarButtonStyle"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:text="@string/continuePlayArea" />
             
         </LinearLayout>
