--- a/SalesManagement/res/layout/fragment_administration_node_options.xml
+++ b/SalesManagement/res/layout/fragment_administration_node_options.xml
@@ -13,56 +13,62 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dip"
         android:layout_margin="1dp"
-        android:orientation="horizontal" >
+        android:orientation="horizontal" 
+        android:layout_weight="2">
 
         <Button
             android:id="@+id/adminOptionAbutton"
             style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="wrap_content"
+            android:layout_width="0dip"
             android:layout_height="match_parent"
             android:layout_margin="2dp"
             android:background="@drawable/customer_button_background"
             android:text="@string/optionAButtonText" 
-            android:enabled="false"/>
+            android:enabled="false"
+            android:layout_weight="0.5"/>
 
         <Button
             android:id="@+id/adminOptionBbutton"
             style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="wrap_content"
+            android:layout_width="0dip"
             android:layout_height="match_parent"
             android:layout_margin="2dp"
             android:background="@drawable/customer_button_background"
-            android:text="@string/optionBButtonText" />
+            android:text="@string/optionBButtonText"
+            android:layout_weight="0.5" />
 
         <Button
             android:id="@+id/adminOptionCbutton"
             style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="wrap_content"
+            android:layout_width="0dip"
             android:layout_height="match_parent"
             android:layout_margin="2dp"
             android:background="@drawable/customer_button_background"
-            android:text="@string/optionCButtonText" />
+            android:text="@string/optionCButtonText"
+            android:layout_weight="0.5" />
 
         <Button
             android:id="@+id/adminOptionDbutton"
             style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dip"
+            android:layout_height="match_parent"
             android:layout_margin="2dp"
             android:background="@drawable/customer_button_background"
-            android:text="@string/optionDButtonText" />
+            android:text="@string/optionDButtonText"
+            android:layout_weight="0.5" />
     </LinearLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="0dip" 
+        android:layout_weight="11">
 
         <LinearLayout
             android:id="@+id/optionALayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical" >
 
             <TextView
@@ -77,8 +83,8 @@
 
                 <EditText
                     android:id="@+id/adminOptionADescription"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:background="@drawable/customer_button_background"
                     android:gravity="top"
                     android:inputType="textMultiLine"
@@ -99,8 +105,8 @@
 
                 <EditText
                     android:id="@+id/adminOptionAEvaluation"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:background="@drawable/customer_button_background"
                     android:gravity="top"
                     android:inputType="textMultiLine"
@@ -117,12 +123,12 @@
 
             <EditText
                 android:id="@+id/adminOptionAMoney"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="fill_parent"
                 android:background="@drawable/customer_button_background"
                 android:gravity="top"
                 android:inputType="number"
-                android:lines="1"
+                android:lines="2"
                 android:singleLine="false" 
                 android:padding="2dp"/>
         </LinearLayout>
@@ -130,7 +136,7 @@
         <LinearLayout
             android:id="@+id/optionBLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical"
             android:visibility="invisible" >
 
@@ -146,8 +152,8 @@
 
                 <EditText
                     android:id="@+id/adminOptionBDescription"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:background="@drawable/customer_button_background"
                     android:gravity="top"
                     android:inputType="textMultiLine"
@@ -168,8 +174,8 @@
 
                 <EditText
                     android:id="@+id/adminOptionBEvaluation"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:background="@drawable/customer_button_background"
                     android:gravity="top"
                     android:inputType="textMultiLine"
@@ -186,8 +192,8 @@
 
             <EditText
                 android:id="@+id/adminOptionBMoney"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="fill_parent"
                 android:background="@drawable/customer_button_background"
                 android:gravity="top"
                 android:inputType="number"
@@ -199,7 +205,7 @@
         <LinearLayout
             android:id="@+id/optionCLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical"
             android:visibility="invisible" >
 
@@ -215,8 +221,8 @@
 
                 <EditText
                     android:id="@+id/adminOptionCDescription"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:background="@drawable/customer_button_background"
                     android:gravity="top"
                     android:inputType="textMultiLine"
@@ -237,8 +243,8 @@
 
                 <EditText
                     android:id="@+id/adminOptionCEvaluation"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:background="@drawable/customer_button_background"
                     android:gravity="top"
                     android:inputType="textMultiLine"
@@ -255,8 +261,8 @@
 
             <EditText
                 android:id="@+id/adminOptionCMoney"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="fill_parent"
                 android:background="@drawable/customer_button_background"
                 android:gravity="top"
                 android:inputType="number"
@@ -284,8 +290,8 @@
 
                 <EditText
                     android:id="@+id/adminOptionDDescription"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:background="@drawable/customer_button_background"
                     android:gravity="top"
                     android:inputType="textMultiLine"
@@ -306,8 +312,8 @@
 
                 <EditText
                     android:id="@+id/adminOptionDEvaluation"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:background="@drawable/customer_button_background"
                     android:gravity="top"
                     android:inputType="textMultiLine"
@@ -324,8 +330,8 @@
 
             <EditText
                 android:id="@+id/adminOptionDMoney"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="fill_parent"
                 android:background="@drawable/customer_button_background"
                 android:gravity="top"
                 android:inputType="number"
@@ -338,16 +344,17 @@
     <LinearLayout
         style="?android:attr/buttonBarStyle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dip"
         android:layout_marginTop="30dp"
-        android:orientation="horizontal" >
+        android:orientation="horizontal" 
+        android:layout_weight="2">
 
         <Button
             android:id="@+id/adminCancelChangesButton"
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="0.50"
+            android:layout_weight="1"
             android:text="@string/CancelButtonText" />
 
         <Button
@@ -355,7 +362,7 @@
             style="?android:attr/buttonBarButtonStyle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="0.50"
+            android:layout_weight="1"
             android:text="@string/SaveButtonText" />
     </LinearLayout>
 
